--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
 	<!-- Shared version number properties -->
 	<properties>
 		<org.springframework.version>4.0.2.RELEASE</org.springframework.version>
+		<apache.tiles.version>3.0.3</apache.tiles.version>
 	</properties>
 
 	<dependencies>
@@ -132,6 +133,23 @@
 			<version>${org.springframework.version}</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.tiles</groupId>
+			<artifactId>tiles-core</artifactId>
+			<version>${apache.tiles.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.tiles</groupId>
+			<artifactId>tiles-jsp</artifactId>
+			<version>${apache.tiles.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.5.8</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
