--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,31 @@
 	<!-- Shared version number properties -->
 	<properties>
 		<org.springframework.version>4.0.2.RELEASE</org.springframework.version>
+		<spring-data-jpa.version>1.5.1.RELEASE</spring-data-jpa.version>
 		<apache.tiles.version>3.0.3</apache.tiles.version>
-		<slf4j.log4j12.version>1.5.8</slf4j.log4j12.version>
+		<slf4j.log4j12.version>1.7.6</slf4j.log4j12.version>
+		<hsqldb.version>2.3.2</hsqldb.version>
+		<hibernate-entitymanager.version>4.3.4.Final</hibernate-entitymanager.version>
 	</properties>
 
 	<dependencies>
+		<dependency>
+			<groupId>org.hsqldb</groupId>
+			<artifactId>hsqldb</artifactId>
+			<version>${hsqldb.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-jpa</artifactId>
+			<version>${spring-data-jpa.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-entitymanager</artifactId>
+			<version>${hibernate-entitymanager.version}</version>
+		</dependency>
+
 		<!-- Core utilities used by other modules. Define this if you use Spring 
 			Utility APIs (org.springframework.core.*/org.springframework.util.*) -->
 		<dependency>
