--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -18,21 +18,21 @@
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
 	
-	<filter>
-	    <filter-name>oemInViewFilter</filter-name>
-	    <filter-class>
-	        org.springframework.orm.jpa.support.OpenEntityManagerInViewFilter
-	    </filter-class>
-	    <init-param>
-	    	<param-name>entityManagerFactoryBeanName</param-name>
-	    	<param-value>emf</param-value>
-	    </init-param>
-	</filter>
-	
-	<filter-mapping>
-	    <filter-name>oemInViewFilter</filter-name>
-	    <url-pattern>/*</url-pattern>
-	</filter-mapping>
+	<!-- 	<filter> -->
+	<!-- 	    <filter-name>oemInViewFilter</filter-name> -->
+	<!-- 	    <filter-class> -->
+	<!-- 	        org.springframework.orm.jpa.support.OpenEntityManagerInViewFilter -->
+	<!-- 	    </filter-class> -->
+	<!-- 	    <init-param> -->
+	<!-- 	    	<param-name>entityManagerFactoryBeanName</param-name> -->
+	<!-- 	    	<param-value>emf</param-value> -->
+	<!-- 	    </init-param> -->
+	<!-- 	</filter> -->
+		
+	<!-- 	<filter-mapping> -->
+	<!-- 	    <filter-name>oemInViewFilter</filter-name> -->
+	<!-- 	    <url-pattern>/*</url-pattern> -->
+	<!-- 	</filter-mapping> -->
 
 	<!-- Declare a Spring MVC DispatcherServlet as usual -->
 	<servlet>
